src/objects/SOW_Term__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SOW_Language_RTF__c</fullName>
        <label>SOW Language RTF</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Snippet__c</fullName>
        <externalId>true</externalId>
        <label>Snippet#</label>
        <type>AutoNumber</type>
    </fields>
    <label>SOW Term</label>
    <listViews>
        <fullName>ALL_SOW_TERMS</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>ALL SOW TERMS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SOW_Language_RTF__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SOW Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOW_Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>